@@ -1,22 +1,22 @@
 package com.sap.fontus.taintaware.lazybasic.operation;
 
+import com.sap.fontus.taintaware.lazybasic.IASLayer;
 import com.sap.fontus.taintaware.shared.IASTaintRange;
 import com.sap.fontus.taintaware.shared.IASTaintRanges;
 import com.sap.fontus.taintaware.shared.IASTaintSourceRegistry;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-public class DeletionLayerTest {
+class DeletionLayerTest {
     @Test
-    public void testDeleteEmpty() {
+    void testDeleteEmpty() {
         IASTaintRanges previous = new IASTaintRanges(10);
-        DeleteLayer deleteLayer = new DeleteLayer(0, 10);
+        IASLayer deleteLayer = new DeleteLayer(0, 10);
 
         IASTaintRanges result = deleteLayer.apply(previous);
 
@@ -27,9 +27,9 @@ public class DeletionLayerTest {
     }
 
     @Test
-    public void testDeleteInTR1() {
-        IASTaintRanges previous = new IASTaintRanges(10, Arrays.asList(new IASTaintRange(0, 10, IASTaintSourceRegistry.MD_CHAR_UNKNOWN_ORIGIN)));
-        DeleteLayer deleteLayer = new DeleteLayer(2, 5);
+    void testDeleteInTR1() {
+        IASTaintRanges previous = new IASTaintRanges(10, List.of(new IASTaintRange(0, 10, IASTaintSourceRegistry.MD_CHAR_UNKNOWN_ORIGIN)));
+        IASLayer deleteLayer = new DeleteLayer(2, 5);
 
         IASTaintRanges result = deleteLayer.apply(previous);
 
@@ -42,12 +42,12 @@ public class DeletionLayerTest {
     }
 
     @Test
-    public void testDeleteInTR2() {
+    void testDeleteInTR2() {
         IASTaintRanges previous = new IASTaintRanges(10, Arrays.asList(
                 new IASTaintRange(0, 5, IASTaintSourceRegistry.MD_CS_UNKNOWN_ORIGIN),
                 new IASTaintRange(5, 10, IASTaintSourceRegistry.MD_CHAR_UNKNOWN_ORIGIN)
         ));
-        DeleteLayer deleteLayer = new DeleteLayer(3, 7);
+        IASLayer deleteLayer = new DeleteLayer(3, 7);
 
         IASTaintRanges result = deleteLayer.apply(previous);
 
@@ -61,12 +61,12 @@ public class DeletionLayerTest {
     }
 
     @Test
-    public void testDeleteInTR3() {
+    void testDeleteInTR3() {
         IASTaintRanges previous = new IASTaintRanges(10, Arrays.asList(
                 new IASTaintRange(0, 5, IASTaintSourceRegistry.MD_CHAR_UNKNOWN_ORIGIN),
                 new IASTaintRange(5, 10, IASTaintSourceRegistry.MD_CHAR_UNKNOWN_ORIGIN)
         ));
-        DeleteLayer deleteLayer = new DeleteLayer(3, 10);
+        IASLayer deleteLayer = new DeleteLayer(3, 10);
 
         IASTaintRanges result = deleteLayer.apply(previous);
 
@@ -79,13 +79,13 @@ public class DeletionLayerTest {
     }
 
     @Test
-    public void testDeleteInTR4() {
+    void testDeleteInTR4() {
         IASTaintRanges previous = new IASTaintRanges(15, Arrays.asList(
                 new IASTaintRange(0, 5, IASTaintSourceRegistry.MD_CS_UNKNOWN_ORIGIN),
                 new IASTaintRange(5, 10, IASTaintSourceRegistry.MD_CHAR_UNKNOWN_ORIGIN),
                 new IASTaintRange(10, 15, IASTaintSourceRegistry.MD_STRING_CREATED_FROM_CHAR_ARRAY)
         ));
-        DeleteLayer deleteLayer = new DeleteLayer(3, 13);
+        IASLayer deleteLayer = new DeleteLayer(3, 13);
 
         IASTaintRanges result = deleteLayer.apply(previous);
 
@@ -99,9 +99,9 @@ public class DeletionLayerTest {
     }
 
     @Test
-    public void testDeleteInTR5() {
-        IASTaintRanges previous = new IASTaintRanges(10, Arrays.asList(new IASTaintRange(0, 5, IASTaintSourceRegistry.MD_CS_UNKNOWN_ORIGIN)));
-        DeleteLayer deleteLayer = new DeleteLayer(0, 5);
+    void testDeleteInTR5() {
+        IASTaintRanges previous = new IASTaintRanges(10, List.of(new IASTaintRange(0, 5, IASTaintSourceRegistry.MD_CS_UNKNOWN_ORIGIN)));
+        IASLayer deleteLayer = new DeleteLayer(0, 5);
 
         IASTaintRanges result = deleteLayer.apply(previous);
 
